# OperatingSystem

./: CMakeLists.txt  CPU.cpp  CPU.h  DISPATCHER.cpp  DISPATCHER.h  DRIVER.cpp  DRIVER.h  LOADER.cpp  LOADER.h  LONG_TERM_SCHEDULER.cpp  LONG_TERM_SCHEDULER.h  MEMORY_MANAGEMENT_UNIT.cpp  MEMORY_MANAGEMENT_UNIT.h  PAGE_SYSTEM.cpp  PAGE_SYSTEM.h  PAGE_TABLE.cpp  PAGE_TABLE.h  PCB.cpp  PCB.h  README.md  SHORT_TERM_SCHEDULER.cpp  SHORT_TERM_SCHEDULER.h  main.cpp
