cmake_minimum_required(VERSION 3.13)
project(Project_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_1 main.cpp main.cpp DRIVER.cpp DRIVER.h CPU.cpp CPU.h LOADER.cpp LOADER.h LONG_TERM_SCHEDULER.cpp LONG_TERM_SCHEDULER.h SHORT_TERM_SCHEDULER.cpp SHORT_TERM_SCHEDULER.h DISPATCHER.cpp DISPATCHER.h MEMORY_MANAGEMENT_UNIT.cpp MEMORY_MANAGEMENT_UNIT.h PCB.cpp PCB.h PAGE_TABLE.cpp PAGE_TABLE.h PAGE_SYSTEM.cpp PAGE_SYSTEM.h)